moderate update to Windows guide

--- a/_posts/2025/2025-04-14-Cobbler-v3.3.7-Windows-Deployment-Guide.md
+++ b/_posts/2025/2025-04-14-Cobbler-v3.3.7-Windows-Deployment-Guide.md
@@ -5,7 +5,7 @@ author: Sus-Admin
 summary: Deploying Microsoft Windows 10 & 11 via PXE network boot.
 ---
 
-This guide assumes that you have a Fedora 34 server or workstation system configured to run Cobbler v3.3.7 similarly to the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html).
+This guide assumes that you have a Fedora 34 server or workstation system configured to run Cobbler v3.3.7 similarly to the [Cobbler v3.3.6 Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html).
 
 ## Table of Contents
 {:.no_toc}
@@ -19,15 +19,11 @@ Starting where the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-
 
 ### Caveats
 
-1. **IMPORTANT:** Issues were encountered running the PXE client as a VirtualBox VM with UEFI firmware, so instead it is recommended to run the PXE client on physical *(bare metal)* hardware or as a [VMWare Workstation/Fusion](https://blogs.vmware.com/workstation/2024/05/vmware-workstation-pro-now-available-free-for-personal-use.html) VM for UEFI installations.
+1. **IMPORTANT:** There was a frequent issue on PXE clients using VirtualBox EFI firmware. For this reason, it is recommended to run both Cobbler server and PXE client as either bare metal systems or [VMWare Workstation/Fusion](https://blogs.vmware.com/workstation/2024/05/vmware-workstation-pro-now-available-free-for-personal-use.html) or [HyperV](https://learn.microsoft.com/en-us/windows-server/virtualization/hyper-v/hyper-v-overview) VMs for UEFI installations.
 
-    - More info on the issues encountered in the **Tips & Troubleshooting** section below.
+    - You may experience different results depending on your hardware and Windows or VirtualBox versions and settings; more info in the **Tips & Troubleshooting** section below
 
-    - If running the PXE client as a VMWare VM it is recommended to also run the Cobbler Server under the same VMWare host or another bare metal machine, using the same specs/settings as described in the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html).
-
-    - Your experience may differ depending on your hardware and Windows and VirtualBox software versions and settings.
-
-1. This guide assumes you have already acquired the Windows 10 and 11 64-bit ISO installation files by using the [Windows 10](https://www.microsoft.com/en-us/software-download/windows10) and [Windows 11](https://www.microsoft.com/en-us/software-download/windows11) Media Creation Tool, which requires an existing Windows 10 or 11 system to create *(like the VirtualBox Host described in the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html))*
+1. This guide assumes you have already acquired the Windows 10 and 11 64-bit ISO installation files by using the [Windows 10](https://www.microsoft.com/en-us/software-download/windows10) and [Windows 11](https://www.microsoft.com/en-us/software-download/windows11) Media Creation Tool
 
     - Also on the Windows 11 download page linked above is the minumum system requirements for installing Windows 11, which include UEFI Secure Boot and TPM support, making a *supported* installation to a VM an advanced topic beyond the scope of this guide.
 
@@ -77,7 +73,7 @@ Edit the `/etc/samba/smb.conf` file to match the below text-block
 
 > More info on this service and configuration in the **Tips & Troubleshooting** section below
 
-Enable and start the smb service
+Enable and start the SMB service
 
 ```shell
 systemctl enable --now smb
@@ -138,7 +134,7 @@ mount -o ro,loop ~/Downloads/Win10_22H2_English_x64.iso /mnt/Windows10
 cobbler import --name Win10 --path /mnt/Windows10
 ```
 
-**If the PXE client will use legacy-BIOS firmware** *(MBR partition scheme)* instead of UEFI, toggle `uefi` to `false` in the Cobbler Profile autoinstallation metadata:
+***Optional:*** If the PXE client will use legacy-BIOS firmware instead of UEFI, toggle `uefi` to `false` in the Cobbler Profile autoinstallation metadata:
 
 ```shell
 cobbler profile edit --name Win10-x86_64 --autoinstall-meta 'uefi'='false' --in-place
@@ -146,22 +142,20 @@ cobbler profile edit --name Win10-x86_64 --autoinstall-meta 'uefi'='false' --in-
 
 > More info in Cobbler's [official docs](https://cobbler.readthedocs.io/en/v3.3.7/user-guide/wingen.html).
 
-Finally, create a new Cobbler System to PXE boot and automatically install Windows 10 Pro, replacing the *"aa:bb:cc:dd:ee:ff"* with the MAC address of your PXE client, being sure not to use a duplicate MAC or IP addresse of any other Cobbler System, then sync up Cobbler.
+Finally, create a new Cobbler System to PXE boot and automatically install Windows 10 Pro, replacing the *"aa:bb:cc:dd:ee:ff"* with the MAC address of your PXE client, being sure not to use a duplicate MAC address of any other Cobbler System, then sync up Cobbler.
 
 ```shell
 cobbler system add --name Win10 --profile Win10-x86_64 --mac-address "aa:bb:cc:dd:ee:ff" --netboot-enabled true --enable-ipxe true
 cobbler sync
 ```
 
-The **PXE Client** VM can now be powered on, and should automatically boot to PXE and install Windows 10 to the VM HDD using the "autounattended.xml" answerfile template.
+The **PXE Client** VM can now be powered on, and should automatically boot to PXE and install Windows 10 to the VM HDD using the "autounattended.xml" answerfile.
 
-- See the **Tips & Troubleshooting** section below for a fix for an issue encountered on the PXE client during the `start-net.cmd` script on both VirualBox and VMWare VMs 
+- See the Tips & Troubleshooting section below for a fix for an issue encountered on the PXE client during the start-net.cmd script on both VirualBox and VMWare VMs
 
 ## Windows 11 PXE Deployment
 
-First use the following commands to edit the `startnet.template` file in order to bypass Windows 11 hardware requirements for the PXE client.
-
-- note that `unix2dos` will properly terminate the lines of text individually.
+***Optional:*** If installing Windows 11 on unsupported hardware, use the following commands to edit the `startnet.template` file in order to bypass hardware requirements for the PXE client.
 
 ```shell
 CMD1=$(echo 'reg add HKLM\\SYSTEM\\Setup\\LabConfig /v BypassSecureBootCheck /t REG_DWORD /d 1 /f' | unix2dos)
@@ -170,7 +164,7 @@ CMD3=$(echo 'reg add HKLM\\SYSTEM\\Setup\\LabConfig /v BypassRAMCheck /t REG_DWO
 CMD4=$(echo 'reg add HKLM\\SYSTEM\\Setup\\LabConfig /v BypassCPUCheck /t REG_DWORD /d 1 /f' | unix2dos)
 CMD5=$(echo 'reg add HKLM\\SYSTEM\\Setup\\LabConfig /v BypassStorageCheck /t REG_DWORD /d 1 /f' | unix2dos)
 CMD6=$(echo '\$distro_share\\sources\\setup.exe \$unattended' | unix2dos)
-sudo sed -i -E "s,^#else.?$,#else if \$os_version == \"11\"\n${CMD1}\n${CMD2}\n${CMD3}\n${CMD4}\n${CMD5}\n${CMD6}\n#else," /etc/cobbler/windows/startnet.template
+sed -i -E "s,^#else.?$,#else if \$os_version == \"11\"\n${CMD1}\n${CMD2}\n${CMD3}\n${CMD4}\n${CMD5}\n${CMD6}\n#else," /etc/cobbler/windows/startnet.template
 ```
 
 Now, take similar steps as with Windows 10 to import and automatically deploy Windows 11 Pro over PXE.
@@ -185,58 +179,85 @@ cobbler sync
 
 The **PXE Client** VM can now be powered on, and should automatically boot to PXE and install Windows 11 to the VM HDD using the "autounattended.xml" answerfile template.
 
-- See the **Tips & Troubleshooting** section below for a fix for an issue encountered on the PXE client during the `start-net.cmd` script on both VirualBox and VMWare VMs 
+- See the Tips & Troubleshooting section below for a fix for an issue encountered on the PXE client during the start-net.cmd script on both VirualBox and VMWare VMs
 
 ## Tips & Troubleshooting
 
-1. The [Cobbler 3.3.6 Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html) **Tips & Troubleshooting** section contains some basic recommendations and limitations of Cobbler which will not be repeated here.
+1. The [Cobbler 3.3.6 Beginner's Guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html) **Tips & Troubleshooting** section contains some basic recommendations and limitations of Cobbler which will not be repeated here.
+
+1. It's important to understand how Cobbler manages Windows distros and deployments *by default*, as there are certain implicit limitations not present with other distros.
+
+    - Cobbler has 3 main templates for Windows distro management, all located in `/etc/cobbler/windows` directory (instead of the usual `/var/lib/cobbler/templates` and `/var/lib/cobbler/scripts` directories), which effectively limit Windows deployments to `cobbler profile` level customizations
+
+        - `startnet.template`: Generates "startnet.cmd" which gets archived/compressed into the WinPE image (loaded from PXE) in order to start Windows `setup.exe` on the PXE client with the associated Answerfile
+
+        - `answerfile.template`: Generates "autounattended.xml" answerfile with **profile** attributes to be retrieved over SMB by PXE clients for unattended installations.
+
+        - `post_ins_cmd.template`: Generates "post_install.cmd" which is used in the Answerfile to retrieve the `autoinstall` file (post-install script) defined for the **profile**
+
+            - By default, the autoinstall file (post-install script) `/var/lib/cobbler/templates/win.ks` has no effect. 
+
+    - The `autoinstall-meta` parameters *(used to specify the boot files and how to download them, answerfile and post_install templates for unattended installations, as well as set firmware/partitioning mode)* can be configured at the `cobbler system` (or `profile`) level and given unique names to generate different files for use by diffrent profiles or systems, but neither the `answerfile.template` or `post_inst_cmd.template` files are system-level aware, they only consist of **profile-level** settings.
+
+        - Only MAC address and other DHCP-related options will be used for *Windows* `cobbler system` items, in addition to the above `autoinstall-meta` parameters, which have limited functionality for Systems.
+
+    - Windows is limited in the [ways to provide an Answerfile](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-automation-overview#implicit-answer-file-search-order), it cannot be specified in boot/kernel parameters like many linux distros
+
+    - This is all only *default* behavior in cobbler, and it would be possible to program additional logic into the `startnet.cmd` or `post_install.cmd` scripts, for instance, to retrieve a diffent answerfile or post-install script based on the hostname (configurable through DHCP) or MAC address. However, that would come with additional limitations and requirements beyond the scope of this guide.
 
 1. **VirtualBox Issues**
 
-    - Specifially, the `ipxe-x86_64.efi` bootloader would fail to "initialize devices" and even though using the `ipxe-snponly-x86_64.efi` bootloader instead would load properly, the PXE client VM would *usually* just hang when downloading on of the WinPE files (i.e. `wimboot`, `boot.sdi`, `bootmgr.exe`, `bcd`, `winpe.wim`)
+    - Specifially, the `ipxe-x86_64.efi` bootloader would fail to "initialize devices" and even though using the `ipxe-snponly-x86_64.efi` bootloader would load properly, the PXE client VM would *usually* just hang when downloading one of the WinPE files (i.e. `wimboot`, `boot.sdi`, `bootmgr.exe`, `bcd`, `winpe.wim`)
 
-        - Tried several troubleshooting steps and could not get a consisten fix:
+        - Tried several troubleshooting steps and could not get a consistent fix:
 
             - Tried different virtual network adapters.
 
-                - Using the "Paravirtualized Network (virtio-net)" adapter did resove this issue with the iPXE boot process and load into the WinPE/wimboot image successfully, but then did not detect any network adapters and failed to begin Window Setup, and further troubleshooting would be beyond the scope of this guide.
+                - Using the "Paravirtualized Network (virtio-net)" adapter did resove this issue with the iPXE boot process and load into the WinPE/wimboot image successfully, but then did not detect any network adapters and failed to begin Windows Setup; further troubleshooting would be beyond the scope of this guide.
+
+            - Tried running PXE client on another host PC with different VirtualBox version
 
             - Tried installing the appropriate VirtualBox Extensions for my version of VB.
 
-            - Disabled Memory Isolation in Windows Security on VirtualBox Host.
+            - Disabled Memory Isolation in Windows Security (and other security options) on VirtualBox Host.
 
             - Tried with and without "Virtual Machine Platform" and "Windows Hypervisor Platform" Windows Features installed/enabled.
+
+            - Tried compiling latest and previous versions of ipxe.efi (snp, intel, realtek, etc...) bootloader from source
 			
-            - Found no relevant entries/errors in VirtualBox VM logs and nothing abnormal in Cobbler server logs (HTTP, TFTP, DHCP).
+            - Found no relevant entries/errors in VirtualBox VM logs *(debug logs enabled)* or Windows Event Viewer and nothing abnormal in Cobbler server logs (HTTP, TFTP, DHCP).
 
-        - A live Windows OS installation can be converted from MBR (legacy-BIOS) to GPT (UEFI) via powershell commands, which can be used as a workaround for compatibility with VirtualBox VM UEFI firmware
+    - A live Windows 10 installation can be easily converted from MBR (legacy-BIOS) to GPT (UEFI) via powershell commands, which can be used as a workaround for compatibility with VirtualBox UEFI firmware
 
-            - source: [https://www.windowscentral.com/how-convert-mbr-disk-gpt-move-bios-uefi-windows-10](https://www.windowscentral.com/how-convert-mbr-disk-gpt-move-bios-uefi-windows-10).
+        - source: [mbr2gpt](https://www.windowscentral.com/how-convert-mbr-disk-gpt-move-bios-uefi-windows-10).
+
 
 1. **start-net.cmd issue**
 
     - The `smb` linux service used to host the installation files for the PXE client  on the Cobbler server would be unresponsive during some installations, primarily when running the `startnet.cmd` script on the PXE client to start Windows Setup, which caused the installation to stall and error-out occasionally.
 
-        - After reading through the manpage (`man smb.conf`) and trying several different configurations the problem persisted; make the following edit to the `startnet.template` file to account for this occasional unresponsiveness/lag from the SMB server when booting into setup by first probing the SMB share until it responds.
+        - After reading through the manpage (`man smb.conf`) and trying several different configurations the problem persisted
 
-        ```shell
-        CMD=$(echo 'dir \$distros_dir || GOTO wno20' | unix2dos)
-        sed -i "s,net use z:,${CMD}\nnet use z:," /etc/cobbler/windows/startnet.template
-        ```
+        - Make the following edit to the `startnet.template` file to account for this occasional unresponsiveness/lag from the SMB server by first enumerating the SMB share until it responds.
+
+          ```shell
+          CMD=$(echo 'dir \$distros_dir || GOTO wno20' | unix2dos)
+          sed -i "s,net use z:,${CMD}\nnet use z:," /etc/cobbler/windows/startnet.template
+          ```
 
 1. References
 
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-automation-overview?view=windows-11](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-automation-overview?view=windows-11)
+    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-automation-overview](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-automation-overview)
 
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/automate-windows-setup?view=windows-11](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/automate-windows-setup?view=windows-11)
+    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/automate-windows-setup](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/automate-windows-setup)
 
     - [https://learn.microsoft.com/en-us/windows-hardware/customize/desktop/unattend/](https://learn.microsoft.com/en-us/windows-hardware/customize/desktop/unattend/)
 
     - [https://learn.microsoft.com/en-us/windows-hardware/customize/desktop/wsim/answer-files-overview](https://learn.microsoft.com/en-us/windows-hardware/customize/desktop/wsim/answer-files-overview)
 
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/update-windows-settings-and-scripts-create-your-own-answer-file-sxs?view=windows-11](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/update-windows-settings-and-scripts-create-your-own-answer-file-sxs?view=windows-11)
+    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/update-windows-settings-and-scripts-create-your-own-answer-file-sxs](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/update-windows-settings-and-scripts-create-your-own-answer-file-sxs)
 
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-log-files-and-event-logs?view=windows-11](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-log-files-and-event-logs?view=windows-11)
+    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-log-files-and-event-logs](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-log-files-and-event-logs)
 
     - [https://learn.microsoft.com/en-us/windows-server/security/guarded-fabric-shielded-vm/guarded-fabric-sample-unattend-xml-file](https://learn.microsoft.com/en-us/windows-server/security/guarded-fabric-shielded-vm/guarded-fabric-sample-unattend-xml-file)
 
@@ -244,11 +265,11 @@ The **PXE Client** VM can now be powered on, and should automatically boot to PX
 
     - [https://learn.microsoft.com/en-us/windows-hardware/customize/desktop/customize-oobe-in-windows-11](https://learn.microsoft.com/en-us/windows-hardware/customize/desktop/customize-oobe-in-windows-11)
 
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/configure-oobexml?view=windows-11&preserve-view=true](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/configure-oobexml?view=windows-11&preserve-view=true)
+    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/configure-oobexml](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/configure-oobexml)
 
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/oobexml-settings?view=windows-11](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/oobexml-settings?view=windows-11)
+    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/oobexml-settings](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/oobexml-settings)
 
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/how-oobexml-works?view=windows-11](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/how-oobexml-works?view=windows-11)
+    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/how-oobexml-works](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/how-oobexml-works)
 
     - [https://learn.microsoft.com/en-us/windows-hardware/customize/desktop/unattend/microsoft-windows-shell-setup-useraccounts](https://learn.microsoft.com/en-us/windows-hardware/customize/desktop/unattend/microsoft-windows-shell-setup-useraccounts)
 
@@ -260,7 +281,7 @@ The **PXE Client** VM can now be powered on, and should automatically boot to PX
 
     - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-log-files-and-event-logs](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-log-files-and-event-logs)
 
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-log-files-and-event-logs?view=windows-10](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-log-files-and-event-logs?view=windows-10)
+    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-log-files-and-event-logs](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-log-files-and-event-logs)
 
     - [https://learn.microsoft.com/en-us/windows/deployment/configure-a-pxe-server-to-load-windows-pe](https://learn.microsoft.com/en-us/windows/deployment/configure-a-pxe-server-to-load-windows-pe)
 
@@ -270,10 +291,8 @@ The **PXE Client** VM can now be powered on, and should automatically boot to PX
 
         - [https://cobbler.readthedocs.io/en/latest/code-autodoc/cobbler.modules.html#module-cobbler.modules.sync_post_wingen](https://cobbler.readthedocs.io/en/latest/code-autodoc/cobbler.modules.html#module-cobbler.modules.sync_post_wingen)
 
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/winpe-intro?view=windows-10](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/winpe-intro?view=windows-10)
+    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/winpe-intro](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/winpe-intro)
 
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/automate-windows-setup?view=windows-10](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/automate-windows-setup?view=windows-10)
+    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/automate-windows-setup](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/automate-windows-setup)
 
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-automation-overview?view=windows-10#implicit-answer-file-search-order](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-automation-overview?view=windows-10#implicit-answer-file-search-order)
-
-    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-command-line-options?view=windows-10](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-command-line-options?view=windows-10)
+    - [https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-command-line-options](https://learn.microsoft.com/en-us/windows-hardware/manufacture/desktop/windows-setup-command-line-options)
