fixed 1 bad link in updated Debian guide

--- a/_posts/2024/2024-12-02-Cobbler-v3.3.7-Debian-Deployment-Guide.md
+++ b/_posts/2024/2024-12-02-Cobbler-v3.3.7-Debian-Deployment-Guide.md
@@ -5,7 +5,7 @@ author: Sus-Admin
 summary: Deploying Debian Bullseye and Bookworm (11 & 12) via PXE network boot.
 ---
 
-This guide assumes that you have a Fedora 34 server or workstation system configured to run Cobbler v3.3.7 similarly to the [Cobbler v3.3.6 Beginner's guide](/blog/2024/Cobbler-v3.3.6-Beginners-Guide/).
+This guide assumes that you have a Fedora 34 server or workstation system configured to run Cobbler v3.3.7 similarly to the [Cobbler v3.3.6 Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html)
 
 ## Table of Contents
 {:.no_toc}
